# near-bit

./: .gitignore  BITCOIN_INFINITY_STATUS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  NEARCORE_INTEGRATION.md  PHASE5_2_COMPLETION_REPORT.md  PHASE5_2_INTEGRATION_PLAN.md  PHASE5_3_CHECKPOINT.md  PHASE5_3_E2E_TEST_PLAN.md  PHASE5_3_EXECUTION_GUIDE.md  PHASE5_3_EXECUTION_STATUS.md  PHASE5_3_INTEGRATION_TESTS.md  PHASE5_3_MAJOR_MILESTONE.md  PHASE5_3_PROGRESS_UPDATE.md  PHASE5_3_SESSION_SUMMARY.md  PHASE5_3_TEST_EXECUTION.md  PHASE5_COMPLETE_ROADMAP.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_IMPLEMENTATION_PROGRESS.md  PHASE5_INTEGRATION_POINTS.md  QUANTUM_RESISTANT_SIGNING_PROPOSAL.md  QUICKSTART.md  README.md  SESSION_SUMMARY_PHASE5.md  STATUS.md  bitcoin-infinity.md  test_p2sh.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  launch-evidence.yml  launch-rehearsal.yml  nightly-fuzz.yml  pages.yml  release-manifest.yml
bitinfinity-btcrpc/: Cargo.toml
bitinfinity-btcrpc/fuzz/: Cargo.toml
bitinfinity-btcrpc/fuzz/corpus/fuzz_rpc_parse/: basic_request.json  batch_request.json  deep_nesting.json  type_confusion.json
bitinfinity-btcrpc/fuzz/corpus/fuzz_tx_hex/: non_hex.txt  truncated_hex.txt
bitinfinity-btcrpc/fuzz/corpus/fuzz_tx_translator/: non_hex_seed.txt
bitinfinity-btcrpc/fuzz/fuzz_targets/: fuzz_amount_math.rs  fuzz_rpc_parse.rs  fuzz_tx_hex.rs  fuzz_tx_translator.rs
bitinfinity-btcrpc/src/: amounts.rs  keystore.rs  main.rs  near_client.rs  near_tx_builder.rs  tx_translator.rs  utxo_synth.rs
bitinfinity-btcrpc/src/methods/: blockchain.rs  mod.rs  network.rs  wallet.rs
bitinfinity-neard/: Cargo.toml
bitinfinity-neard/src/: keys.rs  main.rs
bitinfinity-token/: Cargo.toml
bitinfinity-token/src/: lib.rs
bitinfinity-tools/: Cargo.toml
bitinfinity-tools/fuzz/: Cargo.toml
bitinfinity-tools/fuzz/fuzz_targets/: fuzz_patoshi_csv.rs
bitinfinity-tools/src/: account_manager.rs  genesis_builder.rs  keygen.rs  main.rs  patoshi.rs  signature_recovery.rs  testnet.rs  transaction.rs  utxo_parser.rs
docs/: architecture-overview.md  benchmark-methodology.md  blog-patoshi-balance-floor-explainer.md  blog-utxo-to-genesis-deep-dive.md  blog-what-is-bitcoin-infinity.md  communications-launch-plan.md  documentation-hub.md  external-gate-packet-mainnet-2026-03-10.md  external-gate-packet-mainnet-2026-03-20.md  external-gate-packet.md  foundation-governance-treasury-controls-mainnet-2026-03-05.md  foundation-governance-treasury-controls-mainnet-2026-03-16.md  genesis-determinism-check.md  go-no-go-gate-update.md  go-no-go-signoff-prefill.md  high-finding-closure-mainnet-2026-03-05.md  high-finding-closure-mainnet-2026-03-16.md  incident-communication-templates.md  incident-launch-pack-mainnet-2026-03-10.md  incident-launch-pack-mainnet-2026-03-20.md  incident-launch-pack.md  index.html  issue-11-execution-report.md  issue1-core-goal-check.md  launch-evidence-bundle.md  launch-readiness-gates.md  launch-rehearsal.md  legal-review-signoff-mainnet-2026-03-05.md  legal-review-signoff-mainnet-2026-03-16.md  local-dev-and-testing.md  mainnet-go-no-go-checklist.md  monitoring-alerting-drill-mainnet-2026-03-05.md  monitoring-alerting-drill-mainnet-2026-03-16.md  nightly-fuzz-health-check.md  nightly-fuzz-health-mainnet-2026-03-05.md  nightly-fuzz-health-mainnet-2026-03-16.md  patoshi-constraints-legal-memo-mainnet-2026-03-05.md  patoshi-constraints-legal-memo-mainnet-2026-03-16.md  protocol-limits.md  release-artifact-manifest.md  (+19 more)
docs/benchmark-artifacts/release-candidate-20260305T170837Z/: git-commit.txt  summary.csv  summary.json  summary.md
docs/external-gate-artifacts/mainnet-2026-03-10/: cargo-audit-near-account-id.json  cargo-audit-workspace.json  monitoring-drill-timeline.md  nightly-fuzz-health.json  nightly-fuzz-health.txt
docs/external-gate-artifacts/mainnet-2026-03-20/: cargo-audit-near-account-id.json  cargo-audit-workspace.json  monitoring-drill-timeline.md  nightly-fuzz-health.json  nightly-fuzz-health.txt
docs/sparrow-walkthrough-artifacts/20260305T171643Z-bab1bd9d2/: btc_auth_createpsbt_success_response.json  btc_auth_finalizepsbt_success_response.json  btc_auth_sendrawtransaction_success_response.json  btc_auth_sendtoaddress_success_response.json  btc_auth_walletcreatefundedpsbt_success_response.json  btc_auth_walletprocesspsbt_success_response.json  btc_createpsbt_response.json  btc_finalizepsbt_funded_response.json  btc_getbalance_after_response.json  btc_getbalance_before_response.json  btc_getbalance_funded_after_response.json  btc_getbalance_funded_before_response.json  btc_sendrawtransaction_response.json  git-commit.txt  (+5 more)
genesis-testnet/: config.json  genesis.json
near-account-id/: Cargo.toml
near-account-id/fuzz/: Cargo.toml
near-account-id/fuzz/corpus/fuzz_account_id_parse/: invalid_checksum.txt  near_named.txt  unicode_and_nul.txt  valid_btc_bech32.txt
near-account-id/fuzz/fuzz_targets/: fuzz_account_id_parse.rs
near-account-id/src/: account_id.rs  account_id_ref.rs  borsh.rs  errors.rs  lib.rs  serde.rs  validation.rs
nearcore/: Cargo.toml  PHASE4_COMPLETION_REPORT.md  README_CURRENT_STATUS.md  SESSION_SUMMARY.md  STATUS_FINAL.md  TESTNET_GUIDE.md
nearcore/core/crypto/fuzz/: Cargo.toml
nearcore/core/crypto/fuzz/fuzz_targets/: fuzz_secp256k1_recover.rs
scripts/: check_auth_coverage.sh  e2e_testnet.sh
scripts/benchmark/: run_tps_profiles.sh
scripts/launch/: check_genesis_determinism.sh  check_go_no_go_checklist.sh  check_issue1_core_goals.sh  check_nightly_fuzz_health.sh  check_snapshot_supply_reconciliation.sh  generate_evidence_bundle.sh  generate_external_gate_packet.sh  generate_incident_launch_pack.sh  generate_release_manifest.sh  prefill_go_no_go_signoff.sh  run_launch_rehearsal.sh  run_readiness_gate.sh  update_go_no_go_gate.sh
sydney-btcrpc/: Cargo.toml
sydney-btcrpc/src/: main.rs  tx_translator.rs  utxo_synth.rs
sydney-btcrpc/src/methods/: util.rs
sydney-token/: Cargo.toml
sydney-token/src/: lib.rs
sydney-tools/: Cargo.toml
sydney-tools/src/: genesis_builder.rs  keygen.rs  main.rs  testnet.rs
(+39 files in other folders)
