[workspace]
members = [
    "bitinfinity-tools",
    "bitinfinity-btcrpc",
    "bitinfinity-token",
    "bitinfinity-neard",
    "near-account-id",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Infinity Contributors"]
license = "MIT"

# When we add nearcore as a subtree, this workspace will expand to include it:
# members = [
#     "nearcore/core/primitives",
#     "nearcore/core/crypto",
#     "nearcore/core/chain-configs",
#     "nearcore/chain/chain",
#     "nearcore/chain/jsonrpc",
#     "nearcore/runtime/runtime",
#     # ... other nearcore crates
# ]

[workspace.dependencies]
# Common dependencies for Bitcoin Infinity crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["global-context", "recovery", "rand"] }
bitcoin = "0.32"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
csv = "1"
log = "0.4"
env_logger = "0.11"
