[package]
name = "bitinfinity-neard"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Infinity Contributors"]
license = "MIT"
description = "Bitcoin Infinity node runner - NEAR with Bitcoin addresses"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "bitinfinity-neard"
path = "src/main.rs"
