[package]
name = "near-account-id"
version = "2.0.0"
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>", "Bitcoin Infinity Contributors"]
license = "MIT OR Apache-2.0"
description = "NEAR Account ID with Bitcoin address support (forked for Bitcoin Infinity)"

[dependencies]
borsh = { version = "1.0.0", optional = true }
serde = { version = "1.0.119", features = ["alloc", "derive", "rc"], optional = true }
bech32 = "0.11"
bs58 = "0.5"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
internal_unstable = []
serde = ["dep:serde"]
borsh = ["dep:borsh"]
abi = ["borsh/unstable__schema"]
schemars = []
schemars-v0_8 = []
schemars-v1 = []
schemars-alpha = []
schemars-stable = []
