[package]
name = "sydney-btcrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "sydney-btcrpc"
path = "src/main.rs"
