[package]
name = "sydney-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
txoutset = "0.3"
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "sydney-tools"
path = "src/main.rs"
