[package]
name = "bitinfinity-btcrpc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

# Targets
[[bin]]
name = "fuzz_rpc_parse"
path = "fuzz_targets/fuzz_rpc_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tx_hex"
path = "fuzz_targets/fuzz_tx_hex.rs"
test = false
doc = false
bench = false
