[package]
name = "bitinfinity-btcrpc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitcoin = "0.32"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"

# Targets
[[bin]]
name = "fuzz_rpc_parse"
path = "fuzz_targets/fuzz_rpc_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tx_hex"
path = "fuzz_targets/fuzz_tx_hex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tx_translator"
path = "fuzz_targets/fuzz_tx_translator.rs"
test = false
doc = false
bench = false

[workspace]
